--- a/GBSServiceRegistryApp/pom.xml
+++ b/GBSServiceRegistryApp/pom.xml
@@ -18,6 +18,7 @@
 		<spring-cloud.version>2020.0.4</spring-cloud.version>
 	</properties>
 	<dependencies>
+	<!-- Eureka Server dependency -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
