--- a/GBSServiceRegistryApp/src/main/resources/application.properties
+++ b/GBSServiceRegistryApp/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+#port to be used, this is default port for eureka server
 server.port=8761
+#
 eureka.client.register-with-eureka=false
+#
 eureka.client.fetch-registry=false
